# GooglySync

./: .bazelignore  .gitignore  .pre-commit-config.yaml  BUILD.bazel  GooglySync-PRD.md  LICENSE  MODULE.bazel  README.md  Taskfile.yaml  WORKSPACE.bazel  buf.gen.yaml  buf.yaml  go.mod  go.sum
.github/workflows/: ci.yml
cmd/drive-daemon/: BUILD.bazel  main.go  wire.go  wire_gen.go
cmd/drive-fuse/: BUILD.bazel  app.go  main.go  wire.go  wire_gen.go
cmd/drive-ui/: BUILD.bazel  app.go  main.go  wire.go  wire_gen.go
cmd/googlysync/: BUILD.bazel  main.go  tui.go  wire.go  wire_gen.go
configs/: dev.json
docs/: googlysync-prd.md  googlysync-tech-stack.md
internal/auth/: BUILD.bazel  auth.go  auth_test.go  oauth.go
internal/config/: BUILD.bazel  config.go
internal/daemon/: BUILD.bazel  daemon.go
internal/fswatch/: BUILD.bazel  fswatch.go
internal/ipc/: BUILD.bazel  README.md  client.go  server.go
internal/logging/: BUILD.bazel  logging.go
internal/status/: BUILD.bazel  status.go
internal/storage/: BUILD.bazel  storage.go  store.go  store_test.go
internal/storage/migrations/: 00001_init.sql  00002_sync_state.sql
internal/sync/: BUILD.bazel  queue.go  sync.go
proto/: BUILD.bazel  auth.proto  common.proto  daemon.proto  status.proto
