load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "ipc_proto",
    srcs = [
        "auth.proto",
        "common.proto",
        "daemon.proto",
        "status.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:root_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "ipc_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/sandeepkv93/googlysync/internal/ipc/gen",
    proto = ":ipc_proto",
    visibility = ["//:__subpackages__"],
    deps = ["//:common.proto"],
)

go_library(
    name = "gen",
    embed = [":ipc_go_proto"],
    importpath = "github.com/sandeepkv93/googlysync/internal/ipc/gen",
    visibility = ["//:__subpackages__"],
)
