load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "drive-fuse",
    embed = [":drive-fuse_lib"],
    importpath = "github.com/sandeepkv93/googlysync/cmd/drive-fuse",
    visibility = ["//visibility:public"],
)

go_library(
    name = "drive-fuse_lib",
    srcs = [
        "app.go",
        "main.go",
        "wire_gen.go",
    ],
    importpath = "github.com/sandeepkv93/googlysync/cmd/drive-fuse",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/config",
        "//internal/logging",
        "@org_uber_go_zap//:zap",
    ],
)
