load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "drive-ui",
    embed = [":drive-ui_lib"],
    importpath = "github.com/sandeepkv93/GooglySync/cmd/drive-ui",
    visibility = ["//visibility:public"],
)

go_library(
    name = "drive-ui_lib",
    srcs = ["main.go"],
    importpath = "github.com/sandeepkv93/GooglySync/cmd/drive-ui",
    visibility = ["//visibility:private"],
)
