load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "drive-ui",
    embed = [":drive-ui_lib"],
    importpath = "github.com/sandeepkv93/googlysync/cmd/drive-ui",
    visibility = ["//visibility:public"],
)

go_library(
    name = "drive-ui_lib",
    srcs = [
        "app.go",
        "main.go",
        "wire_gen.go",
    ],
    importpath = "github.com/sandeepkv93/googlysync/cmd/drive-ui",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/config",
        "//internal/logging",
        "@org_uber_go_zap//:go_default_library",
    ],
)

genrule(
    name = "wire_gen",
    srcs = ["wire.go"],
    outs = ["wire_gen.go"],
    cmd = "cd $(RULEDIR) && go run github.com/google/wire/cmd/wire",
    tags = ["manual"],
)
