load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "googlysync",
    embed = [":googlysync_lib"],
    importpath = "github.com/sandeepkv93/googlysync/cmd/googlysync",
    visibility = ["//visibility:public"],
)

go_library(
    name = "googlysync_lib",
    srcs = [
        "main.go",
        "wire_gen.go",
    ],
    importpath = "github.com/sandeepkv93/googlysync/cmd/googlysync",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/auth",
        "//internal/config",
        "//internal/daemon",
        "//internal/fswatch",
        "//internal/ipc",
        "//internal/ipc/gen",
        "//internal/logging",
        "//internal/storage",
        "//internal/sync",
    ],
)
