load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "auth",
    srcs = ["auth.go"],
    importpath = "github.com/sandeepkv93/GooglySync/internal/auth",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/storage",
        "@org_uber_go_zap//:go_default_library",
    ],
)
