load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "logging",
    srcs = ["logging.go"],
    importpath = "github.com/sandeepkv93/googlysync/internal/logging",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "@in_gopkg_natefinch_lumberjack_v2//:lumberjack_v2",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
