load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "storage",
    srcs = ["storage.go"],
    importpath = "github.com/sandeepkv93/GooglySync/internal/storage",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "@org_modernc_sqlite//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
