load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "storage",
    srcs = ["storage.go"],
    importpath = "github.com/sandeepkv93/googlysync/internal/storage",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "@org_modernc_sqlite//:sqlite",
        "@org_uber_go_zap//:zap",
    ],
)
