load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "sync",
    srcs = ["sync.go"],
    importpath = "github.com/sandeepkv93/GooglySync/internal/sync",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/storage",
        "@org_uber_go_zap//:go_default_library",
    ],
)
